--- a/exchangeRateConsoleApp/exchangeRateConsoleApp.csproj
+++ b/exchangeRateConsoleApp/exchangeRateConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\exchangeRateClassLibrary\exchangeRateClassLibrary.csproj" />
+    <ProjectReference Include="..\exchangeRateClassLibrary\currencyClassLibrary.csproj" />
   </ItemGroup>
 
 </Project>
